Subiendo archivos de python

--- a/00. Python/03_clases.ipynb
+++ b/00. Python/03_clases.ipynb
@@ -11,18 +11,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "id": "96b8d86f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "class Persona:\n",
-    "    def __init__(self, nombre, edad): # __init_ es el constructor que funciona al crear una instancia\n",
-    "        self.nombre = nombre # self es una referencia al objeto actual\n",
-    "        self.edad = edad\n",
+    "class People:\n",
+    "    def __init__(self, name, age): # __init_ es el constructor que funciona al crear una instancia\n",
+    "        self.name = name # self es una referencia al objeto actual\n",
+    "        self.age = age\n",
     "\n",
-    "    def saludar(self):\n",
-    "        return f\"Hola, soy {self.nombre} y tengo {self.edad} años.\"\n"
+    "    def greet(self):\n",
+    "        return f\"Hola, soy {self.name} y tengo {self.age} años.\"\n"
    ]
   },
   {
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "id": "27dc58b7",
    "metadata": {},
    "outputs": [
@@ -51,16 +51,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hola, soy Santiago y tengo 89 años.\n"
+      "Hola, soy Sebas y tengo 22 años.\n"
      ]
     }
    ],
    "source": [
     "name = input(\"Ingrese el nombre de la persona: \")\n",
-    "date = int(input(\"Ingrese la edad de la persona: \"))\n",
+    "age = int(input(\"Ingrese la edad de la persona: \"))\n",
     "\n",
-    "persona_guardada = Persona(name, date)\n",
-    "print(persona_guardada.saludar())"
+    "people_saved = People(name, age)\n",
+    "print(people_saved.greet())"
    ]
   },
   {
@@ -109,18 +109,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "id": "26b6a38a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "class Juguete:\n",
-    "    def __init__(self, nombre, color):\n",
-    "        self.nombre = nombre\n",
+    "class Toy:\n",
+    "    def __init__(self, name, color):\n",
+    "        self.name = name\n",
     "        self.color = color\n",
     "\n",
     "    def __str__(self):\n",
-    "        return f\"Tienes el juguete {self.nombre}, y es de color 📚{self.color}\""
+    "        return f\"Tienes el juguete {self.name}, y es de color 📚{self.color}\""
    ]
   },
   {
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "id": "f515dd92",
    "metadata": {},
    "outputs": [
@@ -141,16 +141,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Tienes el juguete Max Tell, y es de color 📚Azul\n"
+      "Tienes el juguete Blas, y es de color 📚Red\n"
      ]
     }
    ],
    "source": [
-    "nombre_juguete = input(\"Ingrese el nombre del juguete: \")\n",
-    "color_juguete = input(\"Ingrese el color del juguete: \")\n",
+    "name_toy = input(\"Ingrese el nombre del juguete: \")\n",
+    "color_toy = input(\"Ingrese el color del juguete: \")\n",
     "\n",
-    "mi_juguete = Juguete(nombre_juguete, color_juguete)\n",
-    "print(mi_juguete)"
+    "my_toy = Toy(name_toy, color_toy)\n",
+    "print(my_toy)"
    ]
   },
   {
@@ -180,29 +180,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "dbb32f35",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Soy un Roco de color Verde\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "class Juguete:\n",
-    "    def __init__(self, nombre, color):\n",
-    "        self.nombre = nombre\n",
+    "class Toy:\n",
+    "    def __init__(self, name, color):\n",
+    "        self.name = name\n",
     "        self.color = color\n",
     "\n",
     "    def __str__(self):\n",
-    "        return f\"Soy un {self.nombre} de color {self.color}\"\n",
-    "    \n",
-    "juguete = input(\"¿Qué juguete quieres? \")\n",
-    "color_juguete = input(\"¿De qué color? \")"
+    "        return f\"Soy un {self.name} de color {self.color}\""
    ]
   },
   {
@@ -215,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "id": "2d5b6850",
    "metadata": {},
    "outputs": [
@@ -223,13 +212,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Soy un Roco de color Verde\n"
+      "Tienes el juguete Maxteel , y es de color 📚Blue\n"
      ]
     }
    ],
    "source": [
-    "mi_juguete = Juguete(juguete, color_juguete)\n",
-    "print(mi_juguete)"
+    "toy = input(\"¿Qué juguete quieres? \")\n",
+    "toy_color = input(\"¿De qué color? \")\n",
+    "\n",
+    "my_toy = Toy(toy, toy_color)\n",
+    "print(my_toy)"
    ]
   },
   {
@@ -251,18 +243,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 18,
    "id": "d2dcbffd",
    "metadata": {},
    "outputs": [],
    "source": [
-    "class Juguete:\n",
-    "    def __init__(self, nombre, color):\n",
-    "        self.nombre = nombre\n",
+    "class Toy:\n",
+    "    def __init__(self, name, color):\n",
+    "        self.name = name\n",
     "        self.color = color\n",
     "\n",
     "    def __repr__(self):\n",
-    "        return f\"Juguete: ({self.nombre!r}), color: ({self.color!r})\""
+    "        return f\"Toy: {self.name!r}, color: {self.color!r}\""
    ]
   },
   {
@@ -275,23 +267,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 19,
    "id": "5229ce11",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Juguete: ('Maxtell'), color: ('Blue')"
+       "Toy: 'Maxtell', color: 'Blue'"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "Juguete(\"Maxtell\", \"Blue\")"
+    "Toy(\"Maxtell\", \"Blue\")"
    ]
   },
   {
@@ -313,18 +305,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 22,
    "id": "03604cc7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "class JugueteSonoro(Juguete):\n",
-    "    def __init__(self, nombre, color, sonido):\n",
-    "        super().__init__(nombre, color)  # ✅ Llama al constructor del padre\n",
-    "        self.sonido = sonido\n",
+    "class ToySound(Toy):\n",
+    "    def __init__(self, name, color, sound):\n",
+    "        super().__init__(name, color)  # ✅ Llama al constructor del padre\n",
+    "        self.sound = sound # Agregacion a la clase heredada el valor de sound\n",
     "\n",
-    "    def reproducir_sonido(self):\n",
-    "        return f\"{self.nombre} hace: {self.sonido}\""
+    "    def reproduce_sound(self):\n",
+    "        return f\"{self.name} hace: {self.sound}\""
    ]
   },
   {
@@ -337,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "id": "eb30fc55",
    "metadata": {},
    "outputs": [
@@ -354,7 +346,7 @@
     "color_animal = input(\"¿Que color tiene el animal? \")\n",
     "sonido_animal = input(\"¿Qué sonido hace el juguete? \")\n",
     "\n",
-    "esjuguete = JugueteSonoro(tipo_animal, color_animal, sonido_animal)\n",
+    "esjuguete = ToySound(tipo_animal, color_animal, sonido_animal)\n",
     "print(\"El \", tipo_animal, \"es de color \", color_animal, \"y hace \",  esjuguete.sonido)"
    ]
   },
