Cambios en el archivos de funciones 02_funciones.ipynb

--- a/00. Python/02_funciones.ipynb
+++ b/00. Python/02_funciones.ipynb
@@ -478,6 +478,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "27178798",
+   "metadata": {},
+   "source": [
+    "___"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "82dff046",
    "metadata": {},
    "source": [
@@ -507,6 +515,14 @@
     "        print(f\"{clave}: {valor}\")\n",
     "\n",
     "mostrar_info(nombre=\"Arca\", lenguaje=\"Python\", nivel=\"Avanzado\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2309769b",
+   "metadata": {},
+   "source": [
+    "___"
    ]
   },
   {
@@ -548,6 +564,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "7aac1dd2",
+   "metadata": {},
+   "source": [
+    "___"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "8c2a5476",
    "metadata": {},
    "source": [
@@ -576,6 +600,20 @@
   },
   {
    "cell_type": "markdown",
+   "id": "376c37f3",
+   "metadata": {},
+   "source": [
+    "___"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "05ab0d20",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
    "id": "539b0209",
    "metadata": {},
    "source": [
@@ -585,7 +623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 1,
    "id": "ab7c08e2",
    "metadata": {},
    "outputs": [
@@ -602,6 +640,14 @@
     "    return funcion(valor)\n",
     "\n",
     "print(aplicar(lambda x: x**2, 7))  # Salida: 25"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ddfb6aab",
+   "metadata": {},
+   "source": [
+    "___"
    ]
   },
   {
@@ -639,9 +685,272 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ade237a6",
+   "metadata": {},
+   "source": [
+    "___"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "27542ace",
+   "metadata": {},
+   "source": [
+    "##### 🔹 11. Manejo de errores y excepciones\n",
+    "###### 📌 Se realiza usando try, except, finally, raise para controlar errores sin romper el programa"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "f55239cf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "El número es: 9\n"
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "    x = int(input(\"Ingresa un número: \"))\n",
+    "    print(\"El número es:\", x)\n",
+    "except ValueError:\n",
+    "    print(\"Eso no es un número válido.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b94cb51a",
+   "metadata": {},
+   "source": [
+    "___"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "82195c66",
+   "metadata": {},
+   "source": [
+    "##### 🔹 12. Decoradores\n",
+    "###### 📌 Funciones que modifican otras funciones. Muy utiles para validacion, logging, control de acceso, etc."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "17658cd4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Antes de la función\n",
+      "Antes de la función\n",
+      "Hola mundo\n",
+      "Después de la función\n",
+      "Después de la función\n"
+     ]
+    }
+   ],
+   "source": [
+    "def decorador(func):\n",
+    "    def envoltura():\n",
+    "        print(\"Antes de la función\")\n",
+    "        func()\n",
+    "        print(\"Después de la función\")\n",
+    "    return envoltura\n",
+    "\n",
+    "@decorador\n",
+    "def saludar():\n",
+    "    print(\"Hola mundo\")\n",
+    "    \n",
+    "deco = decorador(saludar)\n",
+    "deco()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "aaa38a2b",
+   "metadata": {},
+   "source": [
+    "___"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8f39794b",
+   "metadata": {},
+   "source": [
+    "##### 🔹 13. Programación asicrona (async, await)\n",
+    "###### 📌 Para tareas concurrentes como peticiones web, procesamiento paralelo, etc."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "5c00bae2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<coroutine object saludar at 0x00000203EAF93B80>\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\lenovo\\AppData\\Local\\Temp\\ipykernel_19932\\3195359532.py:8: RuntimeWarning: coroutine 'saludar' was never awaited\n",
+      "  saludo = saludar()\n",
+      "RuntimeWarning: Enable tracemalloc to get the object allocation traceback\n"
+     ]
+    }
+   ],
+   "source": [
+    "import asyncio\n",
+    "\n",
+    "async def saludar():\n",
+    "    print(\"Hola\")\n",
+    "    await asyncio.sleep(1)\n",
+    "    print(\"Mundo\")\n",
+    "    \n",
+    "saludo = saludar()\n",
+    "print(saludo)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8df7ef1d",
+   "metadata": {},
+   "source": [
+    "___"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "80ec3802",
+   "metadata": {},
+   "source": [
+    "##### 🔹 14. Expresiones REgulares\n",
+    "###### 📌 Para validar y buscar patrones en texto (re)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "7f35e3b2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<re.Match object; span=(0, 3), match='123'>"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import re\n",
+    "re.match(r\"\\d+\", \"123abc\")  # Coincide con números al inicio"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "78613b2f",
+   "metadata": {},
+   "source": [
+    "___"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ecc750b3",
+   "metadata": {},
+   "source": [
+    "##### 🔹 15. Testing y validación\n",
+    "###### 📌 Se usan assert, unittest, pytest para validar que el codigo funcione correctamente"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "76b3533f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "def sumar(a, b):\n",
+    "    return a + b\n",
+    "\n",
+    "assert sumar(2, 3) == 5\n",
+    "\n",
+    "print(sumar(2, 3))  # Salida: 5"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3b3f60a7",
+   "metadata": {},
+   "source": [
+    "___"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b1f43ecb",
+   "metadata": {},
+   "source": [
+    "##### 🔹 15. Documentacion y buenas practicas\n",
+    "###### 📌 Se usa docsstrings, comentarios utiles, nombre claros y conenciones como PEP8"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "83b03664",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Hola, Arca'"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def saludar(nombre):\n",
+    "    \"\"\"Devuelve un saludo personalizado\"\"\"\n",
+    "    return f\"Hola, {nombre}\"\n",
+    "\n",
+    "saludar(\"Arca\")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f55239cf",
+   "id": "95f20df7",
    "metadata": {},
    "outputs": [],
    "source": []
