Cambios en ejercicios

--- a/00. Python/01_ejercicios_logica_matematica/00_ejercicios.ipynb
+++ b/00. Python/01_ejercicios_logica_matematica/00_ejercicios.ipynb
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "994ebb52",
    "metadata": {},
    "outputs": [
@@ -53,24 +53,65 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Secuencia inicial: [1, 1]\n",
+      "La iteracion range: 2\n",
+      "Siguiente valor calculado: 2\n",
+      "Secuencia actualizada: [1, 1, 2]\n",
+      "La iteracion range: 3\n",
+      "Siguiente valor calculado: 3\n",
+      "Secuencia actualizada: [1, 1, 2, 3]\n",
+      "La iteracion range: 4\n",
+      "Siguiente valor calculado: 5\n",
+      "Secuencia actualizada: [1, 1, 2, 3, 5]\n",
+      "La iteracion range: 5\n",
+      "Siguiente valor calculado: 8\n",
+      "Secuencia actualizada: [1, 1, 2, 3, 5, 8]\n",
+      "Parejas por mes: [1, 1, 2, 3, 5, 8]\n",
       "Parejas por mes: [1, 1, 2, 3, 5, 8]\n",
       "Total al mes 6: 8\n"
      ]
     }
    ],
    "source": [
-    "# 🔹 Versión en Python\n",
+    "# 🔹 Definimos una función llamada fibonacci que recibe un parámetro: meses\n",
+    "# Este parámetro representa cuántos meses queremos simular el crecimiento de las parejas de conejos\n",
     "\n",
     "def fibonacci(meses):\n",
-    "    secuencia = [1, 1]\n",
+    "    \n",
+    "    # 🔹 Inicializamos la lista 'secuencia' con los dos primeros valores de Fibonacci: [1, 1]\n",
+    "    # Mes 1: una pareja inicial\n",
+    "    # Mes 2: aún no se reproduce, sigue habiendo una pareja\n",
+    "    secuencia = [1, 1] # Mes 1 y Mes 2\n",
+    "    print(\"Secuencia inicial:\", secuencia)\n",
+    "    \n",
+    "    # 🔹 Usamos un bucle for que empieza en el mes 3 (índice 2) y termina en el mes indicado\n",
+    "    # Esto simula el crecimiento mes a mes, calculando nuevas parejas\n",
     "    for i in range(2, meses):\n",
+    "        print(\"La iteracion range:\", i)\n",
+    "        \n",
+    "        # 🔹 Calculamos el número de parejas nuevas en el mes actual\n",
+    "        # Sumamos las parejas del mes anterior (i-1) y del mes antes de ese (i-2)\n",
+    "        # Esto representa que las parejas que ya existían hace 2 meses ahora se reproducen\n",
     "        siguiente = secuencia[i-1] + secuencia[i-2]\n",
+    "        print(\"Siguiente valor calculado:\", siguiente)\n",
+    "        \n",
+    "        # 🔹 Agregamos el resultado a la lista 'secuencia'\n",
+    "        # Así vamos construyendo la secuencia completa mes a mes\n",
     "        secuencia.append(siguiente)\n",
+    "        print(\"Secuencia actualizada:\", secuencia)\n",
+    "        \n",
     "    return secuencia\n",
     "\n",
-    "# Ejemplo: 6 meses\n",
+    "# 🔹 Llamamos a la función fibonacci con 6 meses como parámetro\n",
+    "# Esto nos dará la evolución de las parejas de conejos durante 6 meses\n",
     "parejas = fibonacci(6)\n",
+    "\n",
+    "# 🔹 Imprimimos la lista completa de parejas por mes\n",
+    "# Resultado esperado: [1, 1, 2, 3, 5, 8]\n",
     "print(\"Parejas por mes:\", parejas)\n",
+    "\n",
+    "# 🔹 Imprimimos el último valor de la lista, que representa el total de parejas al mes 6\n",
+    "# Usamos parejas[-1] para acceder al último elemento\n",
     "print(\"Total al mes 6:\", parejas[-1])"
    ]
   },
