Agregamos libro de logica de programacion en la carptea de python

--- a/00. Python/01_ejercicios_logica_matematica/00_ejercicios.ipynb
+++ b/00. Python/01_ejercicios_logica_matematica/00_ejercicios.ipynb
@@ -117,22 +117,109 @@
   },
   {
    "cell_type": "markdown",
+   "id": "bcaf1f28",
+   "metadata": {},
+   "source": [
+    "___"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "acecf733",
    "metadata": {},
    "source": [
     "## 🔹 Ejercicio para el lector\n",
+    "---\n",
     "\n",
-    "- ¿Cuántas parejas habrá al mes 10?\n",
-    "- ¿Qué pasaría si las parejas tardaran 2 meses en reproducirse?\n",
-    "- ¿Puedes modificar el código para simular eso?\n",
+    "- Desarrolla un algoritmo que permita adquieir una revista\n",
     "\n",
     "---"
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "0825b144",
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "051ce8a6",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "La revista se encuentra en la tienda 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Tienda para adquisicion de una revista\n",
+    "\n",
+    "tienda_1 = ([])\n",
+    "tienda_2 = ([])\n",
+    "tienda_3 = ([])\n",
+    "\n",
+    "ingreso_revistas_tienda_1 = input(\"Registre nombre de revistas para tienda 1:\")\n",
+    "tienda_1.append(ingreso_revistas_tienda_1)\n",
+    "ingreso_revistas_tienda_2 = input(\"Registre nombre de revistas para tienda 2:\")\n",
+    "tienda_2.append(ingreso_revistas_tienda_2)\n",
+    "ingreso_revistas_tienda_3 = input(\"Registre nombre de revistas para tienda 3:\")\n",
+    "tienda_3.append(ingreso_revistas_tienda_3)\n",
+    "\n",
+    "solicitud_revista = input(\"Ingrese el nombre de la revista que desea adquirir:\")\n",
+    "\n",
+    "if solicitud_revista in tienda_1:\n",
+    "    print(\"La revista se encuentra en la tienda 1\")\n",
+    "elif solicitud_revista in tienda_2:\n",
+    "    print(\"La revista se encuentra en la tienda 2\")\n",
+    "elif solicitud_revista in tienda_3:\n",
+    "    print(\"La revista se encuentra en la tienda 3\")\n",
+    "else:\n",
+    "    print(\"La revista no se encuentra en ninguna tienda\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "aeccbb57",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "- Desarrolla un algoritmo que permita entrar a un casa que esta con llave\n",
+    "\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "7c3582dd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "La puerta se ha abierto\n"
+     ]
+    }
+   ],
+   "source": [
+    "def llave(casa, llave):\n",
+    "    if llave == casa:\n",
+    "        return \"La puerta se ha abierto\"\n",
+    "    else:\n",
+    "        return \"La puerta no se ha podido abrir\"\n",
+    "    \n",
+    "house = input(\"Ingrese el numero de la casa:\")\n",
+    "password = input(\"Ingrese el numero de la llave:\")\n",
+    "\n",
+    "print(llave(house, password))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f969f3e6",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
