--- a/00. Python/01_ejercicios_logica_matematica/00_ejercicios.ipynb
+++ b/00. Python/01_ejercicios_logica_matematica/00_ejercicios.ipynb
@@ -215,9 +215,28 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4e0abf92",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "- Desarrolla un algoritmo que permita dar un beso\n",
+    "\n",
+    "---"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f969f3e6",
+   "id": "abe09bdc",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ab98d26d",
    "metadata": {},
    "outputs": [],
    "source": []
