Logica de libro aplicada

--- a/00. Python/01_ejercicios_logica_matematica/00_ejercicios.ipynb
+++ b/00. Python/01_ejercicios_logica_matematica/00_ejercicios.ipynb
@@ -220,23 +220,158 @@
    "metadata": {},
    "source": [
     "---\n",
-    "- Desarrolla un algoritmo que permita dar un beso\n",
+    "- Ejercicios de logica matematica entre signos\n",
+    "- 1. Ejercicio\n",
     "\n",
     "---"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "abe09bdc",
+   "execution_count": 14,
+   "id": "b8f56833",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Variable de a: 10\n",
+      "Variable de b: 20\n",
+      "Variable de c: 10\n",
+      "Variable de a2 10 + 15: 25\n",
+      "Variable de b2 32 + 12: 20\n",
+      "Variable de c2 10 * 10 igual a: 100\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 10\n",
+    "print(\"Variable de a:\", a)\n",
+    "b = 20 \n",
+    "print(\"Variable de b:\", b)\n",
+    "c = 10\n",
+    "print(\"Variable de c:\",c)\n",
+    "a2 = a +15\n",
+    "print(\"Variable de a2\", a, \"+ 15:\",a2)\n",
+    "b2 = b + 12\n",
+    "print(\"Variable de b2\", b2, \"+ 12:\",b)\n",
+    "c2 = c * a\n",
+    "print(\"Variable de c2\", c,\"*\", a, \"igual a:\", c2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6c3222a1",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "- 2. Ejercicio\n",
+    "\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "2db184de",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Variable de a: 3\n",
+      "Variable de b: 5\n",
+      "Variable de c: 10\n",
+      "Variable de a2: 3\n",
+      "Variable de b2: 3\n",
+      "Variable de c2: 1\n",
+      "Variable de a3: 10.5\n",
+      "Variable de b3: 18.0\n",
+      "Variable de c3: 46.5\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=3\n",
+    "print(\"Variable de a:\", a)\n",
+    "b=5\n",
+    "print(\"Variable de b:\", b)\n",
+    "c=10\n",
+    "print(\"Variable de c:\", c)\n",
+    "a2=a+b-5\n",
+    "print(\"Variable de a2:\", a2)\n",
+    "b2=a2+b-5\n",
+    "print(\"Variable de b2:\", b2)\n",
+    "c2=a2+b2-5\n",
+    "print(\"Variable de c2:\", c2)\n",
+    "a3=a2+5*b2/2\n",
+    "print(\"Variable de a3:\", a3)\n",
+    "b3=a3+5*b2/2\n",
+    "print(\"Variable de b3:\", b3)\n",
+    "c3=a3+b3*2\n",
+    "print(\"Variable de c3:\", c3)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "364cdeba",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "- 3. Ejercicio\n",
+    "\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "3a3d08c6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Variable de a: 10\n",
+      "Variable de b: 5\n",
+      "Variable de c: 10\n",
+      "Variable de a2: 10 + 5 -5 = 10\n",
+      "Variable de b2: 10 + 5 -5 = 10\n",
+      "Variable de c2: 10 + 10 -5 = 15\n",
+      "Variable de a3: 10 + 5 * 10 / 2 = 35.0\n",
+      "Variable de b3: 35.0 + 5 * 10 / 2 = 60.0\n",
+      "Variable de c3: 35.0 + 60.0 * 2 = 155.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=10\n",
+    "print(\"Variable de a:\", a)\n",
+    "b=5\n",
+    "print(\"Variable de b:\", b)\n",
+    "c=10\n",
+    "print(\"Variable de c:\", c)\n",
+    "a2=a+b-5\n",
+    "print(\"Variable de a2:\",a,\"+\",b,\"-5 =\", a2)\n",
+    "b2=a2+b-5\n",
+    "print(\"Variable de b2:\",a2,\"+\",b,\"-5 =\", b2)\n",
+    "c2=a2+b2-5\n",
+    "print(\"Variable de c2:\", a2,\"+\",b2,\"-5 =\", c2)\n",
+    "a3=a2+5*b2/2\n",
+    "print(\"Variable de a3:\", a2,\"+ 5\",\"*\", b2, \"/ 2 =\", a3)\n",
+    "b3=a3+5*b2/2\n",
+    "print(\"Variable de b3:\", a3,\"+ 5 *\", b2, \"/ 2 =\" ,b3)\n",
+    "c3=a3+b3*2\n",
+    "print(\"Variable de c3:\", a3,\"+\",b3,\"* 2 =\",c3)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ab98d26d",
+   "id": "2ebfab2a",
    "metadata": {},
    "outputs": [],
    "source": []
